[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "preplib"
version = "0.0.3"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "help with ap8 csv preperation"
readme = "readme.md"
# requires-python = ">=3.8"
dependencies = [
  "pandas",
  "pyyaml",
  #"traction @ git+https://github.com/numlims/traction"
  "traction @ https://github.com/numlims/traction/archive/refs/tags/v0.0.5.zip",  
  "dip @ https://github.com/numlims/dip/archive/refs/tags/v0.0.2.zip"  
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[tool.setuptools]
packages = ["preplib"]
[project.scripts]
preplib = "preplib:__main__"
